--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -11,7 +11,7 @@
 
 .header {
   display: flex;
-  margin-top: 9px;
+  margin-top: 7px;
   font-size: 30px;
   font-weight: 600;
   margin-left: 22.8%;
@@ -48,7 +48,7 @@
 }
 
 .authorization {
-  margin-top: 20px;
+  margin-top: 18px;
   margin-right: 10px;
 }
 
@@ -59,6 +59,12 @@
 }
 
 .check_in:hover {
+  cursor: pointer;
+  color: rgb(255, 0, 0);
+  transition: 0.1s ease-in-out;
+}
+
+.logout:hover {
   cursor: pointer;
   color: rgb(255, 0, 0);
   transition: 0.1s ease-in-out;
